--- a/src/styles/modules/_m-button.sass
+++ b/src/styles/modules/_m-button.sass
@@ -76,7 +76,7 @@
         background-color: $color-accent
         box-shadow: $btn-shade-active
 
-    &-blue
+    &-warning
       background-color: $color-warning
       border: 0
       line-height: 2.9
