--- a/src/styles/modules/_m-fields.sass
+++ b/src/styles/modules/_m-fields.sass
@@ -4,13 +4,13 @@
     width: 100%
 
   +e(input)
-    +border(1px solid color(agray, light))
+    +border(1px solid $color-gray-light)
     +rem-fallback(font-size, $font-size-m)
     +rem-fallback(height, $height-input)
     +rem-fallback(padding, $space-xs)
     background-color: color(awhite)
     border-radius: $radius-default
-    color: color(agray, dark)
+    color: $color-black
     margin: 0
     outline: none
     width: 100%
