--- a/src/styles/modules/_m-modal.sass
+++ b/src/styles/modules/_m-modal.sass
@@ -74,7 +74,7 @@
 
       header
         background: $color-white
-        border-bottom: 1px solid color(agray, light)
+        border-bottom: 1px solid $color-gray-light
         height: $space-xl
 
       main
