--- a/src/styles/modules/_m-offers-form.sass
+++ b/src/styles/modules/_m-offers-form.sass
@@ -26,7 +26,7 @@
 
   +e('all-offers')
     +rem-fallback(padding, $space-s)
-    font-weight: 200
+    font-weight: $font-weight-light
     background: $color-gray
 
     a
@@ -34,4 +34,4 @@
 
   +e('footnote')
     font-weight: 400
-    color: color(agray, light)
+    color: $color-gray-light
