--- a/src/styles/modules/_m-pagination.sass
+++ b/src/styles/modules/_m-pagination.sass
@@ -13,7 +13,7 @@
       width: 186px
       position: relative
       font-size: $space-s
-      font-weight: 200
+      font-weight: $font-weight-light
       line-height: 26px
       cursor: pointer
 
@@ -41,7 +41,7 @@
             width: 88px
 
             &.active
-              font-weight: bold
+              font-weight: $font-weight-bold
 
           .periodic-icon
             fill: $color-primary
