--- a/src/styles/modules/_m-textlink.sass
+++ b/src/styles/modules/_m-textlink.sass
@@ -19,7 +19,7 @@
       color: color(ablue, dark)
 
   +m(color-gray-light)
-    color: color(agray, light)
+    color: $color-gray-light
 
     +breakpoint(desktop)
       &:hover
