--- a/src/styles/modules/_m-accordion.sass
+++ b/src/styles/modules/_m-accordion.sass
@@ -9,14 +9,14 @@
 
     div.main
       font-size: $font-size-m
-      font-weight: 200
+      font-weight: $font-weight-light
 
       div.content
         padding: $space-xxs 0 $space-xxs
 
   div.header
     display: flex
-    font-weight: bold
+    font-weight: $font-weight-bold
     font-size: $font-size-m
     line-height: $line-height-m
     color: $color-primary
@@ -34,7 +34,7 @@
 
   div.main
     font-size: $font-size-m
-    font-weight: 200
+    font-weight: $font-weight-light
 
     div.content
       padding-bottom: $space-s
