--- a/src/styles/modules/_m-npa-signup.sass
+++ b/src/styles/modules/_m-npa-signup.sass
@@ -1,5 +1,5 @@
 +b(npa-signup)
-  color: color(agray, darker)
+  color: $color-gray-darker
 
   +breakpoint(tablet-wide)
     display: grid
@@ -59,6 +59,6 @@
       grid-template-columns: 1fr 1fr
 
     li
-      font-weight: 200
+      font-weight: $font-weight-light
       font-size: $font-size-m
       +rem-fallback(margin-bottom, $space-s)
