--- a/src/styles/modules/_m-radio-buttons.sass
+++ b/src/styles/modules/_m-radio-buttons.sass
@@ -44,7 +44,7 @@
 
     &:disabled+.#{$prefix-component}radio__label--color-grey,
     &:disabled+.#{$prefix-component}radio__label--color-ltgrey
-      color: color(agray, light)
+      color: $color-gray-light
 
     &:checked ~ .#{$prefix-component}radio__outside
       border: 2px solid color(ablue, base)
@@ -71,7 +71,7 @@
     &:disabled ~ .#{$prefix-component}radio__outside--color-grey,
     &:disabled ~ .#{$prefix-component}radio__outside--color-ltgrey
       &.#{$prefix-component}radio__outside
-        border: 2px solid color(agray, light)
+        border: 2px solid $color-gray-light
 
     &:disabled ~ .#{$prefix-component}radio__outside--color-white
       &.#{$prefix-component}radio__outside
@@ -91,9 +91,9 @@
     +rem-fallback('border-radius', $radius-default)
     +rem-fallback('line-height', $line-height-m-v2)
     +rem-fallback('padding-left', $space-l)
-    color: color(agray, darker)
+    color: $color-gray-darker
     display: inline-block
-    font-weight: 200
+    font-weight: $font-weight-light
     width: 100%
 
     +modifier('blue')
@@ -102,7 +102,7 @@
   +element('outside')
     display: block
     position: absolute
-    border: 2px solid color(agray, light)
+    border: 2px solid $color-gray-light
     border-radius: 100%
     +rem-fallback('padding', 8.5px)
     top: 1px
