HB-5116: more updating component styles for rebranding

--- a/src/styles/_base.sass
+++ b/src/styles/_base.sass
@@ -5,7 +5,7 @@
     margin: 0
     padding: 0
     font-family: $font
-    font-weight: 400
+    font-weight: $font_weight_normal
     font-size: $base-font-size
     color: $preset-body-color
     line-height: 1.5
