--- a/src/styles/modules/_m-button.sass
+++ b/src/styles/modules/_m-button.sass
@@ -114,7 +114,7 @@
         color: $color-white
 
   &[disabled]
-    background-color: color(agray, lighter)
+    background-color: $color-gray-lighter
     border: 0
     line-height: 2.9
     cursor: not-allowed
