--- a/src/styles/modules/_m-checkbox.sass
+++ b/src/styles/modules/_m-checkbox.sass
@@ -32,7 +32,7 @@
       +border(2px solid color(ablue, base))
 
     +is(disabled)
-      +border(2px solid color(agray, lighter))
+      +border(2px solid $color-gray-lighter)
       background-color: color(awhite, base)
 
   +e(label-container)
