--- a/src/styles/modules/_m-modal.sass
+++ b/src/styles/modules/_m-modal.sass
@@ -32,7 +32,7 @@
     @include border-radius($radius-default)
     background-clip: padding-box
     background: $color-white
-    border: 6px solid color(ablue)
+    border: 6px solid $color-primary
     position: relative
     width: 100%
 
