--- a/src/styles/modules/_m-offers-form.sass
+++ b/src/styles/modules/_m-offers-form.sass
@@ -30,8 +30,8 @@
     background: $color-gray
 
     a
-      font-weight: 400
+      font-weight: $font_weight_normal
 
   +e('footnote')
-    font-weight: 400
+    font-weight: $font_weight_normal
     color: $color-gray-light
