--- a/src/styles/modules/_m-pagination.sass
+++ b/src/styles/modules/_m-pagination.sass
@@ -35,7 +35,7 @@
 
           a
             font-size: 16px
-            font-weight: 400
+            font-weight: $font_weight_normal
             line-height: 24px
             display: flex
             width: 88px
