--- a/src/styles/modules/_m-paragraph.sass
+++ b/src/styles/modules/_m-paragraph.sass
@@ -19,7 +19,7 @@ $sizes: ( xxs: $font-size-xxs, xs: $font-size-xs, s: $font-size-s, m: $font-size
     color: $color-gray-light
 
   +m('color-blue')
-    color: color(ablue)
+    color: $color-primary
 
   +m('family-special')
     font-family: $font-special
