--- a/src/styles/modules/_m-pet-card.sass
+++ b/src/styles/modules/_m-pet-card.sass
@@ -25,20 +25,20 @@
       right: 0
       border-bottom-left-radius: $radius-default
       border-bottom-right-radius: $radius-default
-      color: color(awhite)
+      color: $color-white
       text-align: center
       font-size: $font-size-xs
       display: flex
       align-items: center
       justify-content: center
       font-family: $font
-      font-weight: 700
+      font-weight: $font_weight_bold
 
       &.orange
         background: #FF8F43
 
       &.blue
-        background: color(ablue)
+        background: $color-primary
 
   div.content
     margin-left: $space-xs
