--- a/src/styles/modules/_m-popup.sass
+++ b/src/styles/modules/_m-popup.sass
@@ -8,7 +8,7 @@
     margin-left: auto
     margin-right: 0
     right: 0
-    background: color(awhite)
+    background: $color-white
     border-radius: $radius-default
     box-shadow: $shadow-callout
     position: relative
@@ -17,7 +17,7 @@
     &::after
       +border(8px solid color(ablack))
       +rem-fallback('left', $space-xxxxl)
-      border-color: transparent transparent color(awhite) color(awhite)
+      border-color: transparent transparent $color-white $color-white
       box-shadow: $shadow-callout
       box-sizing: border-box
       content: ''
