--- a/src/styles/legacy/_tools/_mixins.scss
+++ b/src/styles/legacy/_tools/_mixins.scss
@@ -7,38 +7,38 @@
     font-family: $helvetica;
     color: $color-black;
     font-weight: $font-weight-normal;
-    @include font-size(16);
+    font-size: $font_size_s;
     @include rem-fallback("line-height", 25px);
   }
   @if $h-heading == "h5-museo" {
     font-family: $font;
-    @include font-size(16);
-    font-weight: 700;
+    font-size: $font_size_s;
+    font-weight: $font_weight_bold;
   }
   @if $h-heading == "h6-heading" {
     font-family: $font;
-    font-weight: 700;
-    @include font-size(14);
+    font-weight: $font_weight_bold;
+    font-size: $font-size-xs;
     @include rem-fallback("line-height", 22px);
   }
   @if $h-heading == "h6-museo" {
     font-family: $font;
-    font-weight: 700;
-    @include font-size(14);
+    font-weight: $font_weight_bold;
+    font-size: $font-size-xs;
   }
   @if $h-heading == "h1-museo" {
     font-family: $font;
     color: $color-black;
-    font-weight: 700;
-    @include font-size(45);
+    font-weight: $font_weight_bold;
+    font-size: $font-size-xxl;
     line-height: 1.37;
     @include rem-fallback("letter-spacing", -1px);
   }
   @if $h-heading == "h2-museo" {
     font-family: $font;
     color: $color-black;
-    font-weight: 700;
-    @include font-size(32);
+    font-weight: $font_weight_bold;
+    font-size: $font-size-xl;
     line-height: 1.5;
     @include rem-fallback("letter-spacing", -0.5px);
   }
@@ -46,7 +46,7 @@
     font-family: $helvetica;
     color: $color-black;
     font-weight: $font-weight-bold;
-    @include font-size(20);
+    font-size: $font_size_m;
     @include rem-fallback("line-height", 32px);
     @include rem-fallback("letter-spacing", -0.25px);
   }
@@ -54,7 +54,7 @@
     font-family: $helvetica;
     color: $color-black;
     font-weight: $font-weight-bold;
-    @include font-size(20);
+    font-size: $font_size_m;
     @include rem-fallback("line-height", 26px);
     @include rem-fallback("letter-spacing", -0.25px);
   }
@@ -62,7 +62,7 @@
     font-family: $helvetica;
     color: $color-black;
     font-weight: $font-weight-bold;
-    @include font-size(20);
+    font-size: $font_size_m;
     @include rem-fallback("line-height", 24px);
     @include rem-fallback("letter-spacing", -0.25px);
   }
@@ -70,7 +70,7 @@
     font-family: $helvetica;
     color: $color-gray-darker;
     font-weight: $font-weight-light;
-    @include font-size(20);
+    font-size: $font_size_m;
     @include rem-fallback("line-height", 26px);
     letter-spacing: 0;
   }
@@ -78,31 +78,31 @@
     font-family: $helvetica;
     color: $color-gray-darker;
     font-weight: $font-weight-light;
-    @include font-size(20);
+    font-size: $font_size_m;
     @include rem-fallback("line-height", 24px);
     letter-spacing: 0;
   }
   @if $h-heading == "h5__heading" {
     font-family: $helvetica;
     color: $color-black;
-    font-weight: 400;
-    @include font-size(16);
+    font-weight: $font_weight_normal;
+    font-size: $font_size_s;
     @include rem-fallback("line-height", 25px);
     letter-spacing: 0;
   }
   @if $h-heading == "h5__heading-h5--museo" {
     font-family: $font;
     color: $color-black;
-    font-weight: 700;
-    @include font-size(16);
+    font-weight: $font_weight_bold;
+    font-size: $font_size_s;
     @include rem-fallback("line-height", 25px);
     letter-spacing: 0;
   }
   @if $h-heading == "h5__heading-h5--museo-h5--x-compact" {
     font-family: $font;
     color: $color-black;
-    font-weight: 400;
-    @include font-size(16);
+    font-weight: $font_weight_normal;
+    font-size: $font_size_s;
     @include rem-fallback("line-height", 18px);
     letter-spacing: 0;
   }
@@ -110,7 +110,7 @@
     font-family: $helvetica;
     color: $color-gray-darker;
     font-weight: $font-weight-light;
-    @include font-size(16);
+    font-size: $font_size_s;
     @include rem-fallback("line-height", $space-s);
     letter-spacing: 0;
   }
@@ -118,7 +118,7 @@
     font-family: $helvetica;
     color: $color-gray-darker;
     font-weight: $font-weight-light;
-    @include font-size(16);
+    font-size: $font_size_s;
     @include rem-fallback("line-height", 25px);
     letter-spacing: 0;
   }
@@ -126,7 +126,7 @@
     font-family: $helvetica;
     color: $color-black;
     font-weight: $font-weight-normal;
-    @include font-size(20);
+    font-size: $font_size_m;
     @include rem-fallback("line-height", 26px);
     @include rem-fallback("letter-spacing", -0.25px);
   }
@@ -134,7 +134,7 @@
     font-family: $helvetica;
     color: $color-black;
     font-weight: $font-weight-normal;
-    @include font-size(20);
+    font-size: $font_size_m;
     @include rem-fallback("line-height", 24px);
     @include rem-fallback("letter-spacing", -0.25px);
   }
@@ -142,39 +142,39 @@
     font-family: $helvetica;
     color: $color-black;
     font-weight: $font-weight-normal;
-    @include font-size(16);
+    font-size: $font_size_s;
     @include rem-fallback("line-height", $space-s);
     letter-spacing: 0;
   }
   @if $h-heading == "h5__heading-h5--bold-h5--compact" {
     font-family: $helvetica;
     color: $color-black;
-    font-weight: 700;
-    @include font-size(16);
+    font-weight: $font_weight_bold;
+    font-size: $font_size_s;
     @include rem-fallback("line-height", $space-s);
     letter-spacing: 0;
   }
   @if $h-heading == "h5__heading-h5--bold" {
     font-family: $helvetica;
     color: $color-black;
-    font-weight: 700;
-    @include font-size(16);
+    font-weight: $font_weight_bold;
+    font-size: $font_size_s;
     @include rem-fallback("line-height", 25px);
     letter-spacing: 0;
   }
   @if $h-heading == "h1__heading-h1--museo" {
     font-family: $font;
     color: $color-black;
-    font-weight: 700;
-    @include font-size(45);
+    font-weight: $font_weight_bold;
+    font-size: $font-size-xxl;
     @include rem-fallback("line-height", 62px);
     @include rem-fallback("letter-spacing", -1px);
   }
   @if $h-heading == "h2__heading-h2--museo" {
     font-family: $font;
     color: $color-black;
-    font-weight: 700;
-    @include font-size(32);
+    font-weight: $font_weight_bold;
+    font-size: $font-size-xl;
     @include rem-fallback("line-height", 48px);
     @include rem-fallback("letter-spacing", -0.5px);
   }
@@ -182,31 +182,31 @@
     font-family: $font;
     color: $color-black;
     font-weight: $font-weight-normal;
-    @include font-size(26);
+    font-size: $font-size-l;
     @include rem-fallback("line-height", 39px);
     @include rem-fallback("letter-spacing", -0.5px);
   }
   @if $h-heading == "h3__heading-h3--bold" {
     font-family: $helvetica;
     color: $color-black;
-    font-weight: 700;
-    @include font-size(26);
+    font-weight: $font_weight_bold;
+    font-size: $font-size-l;
     @include rem-fallback("line-height", 39px);
     @include rem-fallback("letter-spacing", -0.5px);
   }
   @if $h-heading == "h3__heading-h3--museo-h3--x-compact" {
     font-family: $font;
     color: $color-black;
-    font-weight: 700;
-    @include font-size(26);
+    font-weight: $font_weight_bold;
+    font-size: $font-size-l;
     @include rem-fallback("line-height", 30px);
     @include rem-fallback("letter-spacing", -0.5px);
   }
   @if $h-heading == "h3__heading-h3--bold-h3--compact" {
     font-family: $helvetica;
     color: $color-black;
-    font-weight: 700;
-    @include font-size(26);
+    font-weight: $font_weight_bold;
+    font-size: $font-size-l;
     @include rem-fallback("line-height", 31px);
     @include rem-fallback("letter-spacing", -0.5px);
   }
@@ -214,59 +214,59 @@
     font-family: $helvetica;
     color: $color-gray-darker;
     font-weight: $font-weight-light;
-    @include font-size(14);
+    font-size: $font-size-xs;
     @include rem-fallback("line-height", 17px);
     letter-spacing: 0;
   }
   @if $h-heading == "h6__heading-h6--compact" {
     font-family: $helvetica;
     font-weight: $font-weight-normal;
-    @include font-size(14);
+    font-size: $font-size-xs;
     @include rem-fallback("line-height", 17px);
   }
   @if $h-heading == "h6__heading-h6--museo-h6--compact" {
     font-family: $font;
     font-weight: $font-weight-normal;
-    @include font-size(14);
+    font-size: $font-size-xs;
     @include rem-fallback("line-height", 17px);
   }
   @if $h-heading == "h6__heading-h6--bold" {
     font-family: $helvetica;
     color: $color-black;
-    font-weight: 700;
-    @include font-size(14);
+    font-weight: $font_weight_bold;
+    font-size: $font-size-xs;
     @include rem-fallback("line-height", 22px);
     letter-spacing: 0;
   }
   @if $h-heading == "h6__heading-h6--bold-h6--compact" {
     font-family: $helvetica;
     color: $color-black;
-    font-weight: 700;
-    @include font-size(14);
+    font-weight: $font_weight_bold;
+    font-size: $font-size-xs;
     @include rem-fallback("line-height", 17px);
     letter-spacing: 0;
   }
   @if $h-heading == "h6__heading" {
     font-family: $helvetica;
     color: $color-black;
-    font-weight: 400;
-    @include font-size(14);
+    font-weight: $font_weight_normal;
+    font-size: $font-size-xs;
     @include rem-fallback("line-height", 22px);
     letter-spacing: 0;
   }
   @if $h-heading == "h4__heading-h4--museo-h4--compact" {
     font-family: $font;
     color: $color-black;
-    font-weight: 700;
-    @include font-size(20);
+    font-weight: $font_weight_bold;
+    font-size: $font_size_m;
     @include rem-fallback("line-height", 26px);
     @include rem-fallback("letter-spacing", -0.25px);
   }
   @if $h-heading == "h4__heading-h4--museo" {
     font-family: $font;
     color: $color-black;
-    font-weight: 400;
-    @include font-size(20);
+    font-weight: $font_weight_normal;
+    font-size: $font_size_m;
     @include rem-fallback("line-height", 32px);
     @include rem-fallback("letter-spacing", -0.25px);
   }
@@ -347,19 +347,20 @@
 // Mixins For Textarea
 
 @mixin labeltext($labeltext) {
-  color: $color-gray-light;
+  color: $color-gray-darker;
   position: absolute;
   @include rem-fallback("left", 17px);
   pointer-events: none;
   transition: 0.2s ease;
   @if $labeltext == "label-field" {
-    @include font-size(20);
+    font-size: $font_size_m;
     @include rem-fallback("bottom", 14px);
   } @else if $labeltext == "label-textarea" {
-    @include font-size(20) @include rem-fallback("top", 53px);
+    font-size: $font-size_m;
+    @include rem-fallback("top", 53px);
     @include rem-fallback("left", $space-s);
   } @else if $labeltext == "label-field-small" {
-    @include font-size(16);
+    font-size: $font_size_s;
     @include rem-fallback("top", 14px);
     @include rem-fallback("left", 16px);
   }
