--- a/src/styles/modules/_m-textarea.sass
+++ b/src/styles/modules/_m-textarea.sass
@@ -16,10 +16,10 @@
   width: 100%
 
   &:focus
-    +border(1px solid color(ablue))
+    +border(1px solid $color-primary)
 
   +is(error)
-    +border(1px solid color(aorange))
+    +border(1px solid $color-warning)
 
   +e(label)
     +labeltext($labeltext: label-textarea)
@@ -35,7 +35,7 @@
   &:focus, &.#{_has(content)}
     ~ label
       +rem-fallback('font-size', $font-size-xxs)
-      font-weight: 700
+      font-weight: $font_weight_bold
       line-height: 1
 
   +e(error-msg)
@@ -43,7 +43,7 @@
     @include rem-fallback('line-height', $line-height-xs-v2)
     @include rem-fallback('right', $space-xs)
     @include rem-fallback('top', $space-xxxxs)
-    color: color(aorange)
+    color: $color-warning
     position: absolute
     text-align: right
     transition: all .2s ease-in-out
